[tool.poetry]
name = "llm-api-concurrent-test"
version = "0.1.0"
description = "LLM API并发性能测试工具"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
asyncio = "^3.4.3"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
plotly = "^5.18.0"
streamlit = "^1.30.0"
locust = "^2.20.1"
aiohttp = "^3.9.3"
typer = "^0.9.0"
loguru = "^0.7.2"
pydantic = "^2.5.3"
tqdm = "^4.66.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "ANN", "COM", "C4", "RET", "SIM", "ARG"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 